# volman

./: 0Temp.c  0main.c  Readme.md  config.h  context.c  context.h  devblock.c  devblock.h  device.c  device.h  main.c  meson.build  othermain.c  printlog.c  printlog.h  tvm-block-device.c  tvm-block-device.h  tvm-context.c  tvm-context.h  tvm-device.c  tvm-device.h  tvm-gio-extensions.c  tvm-gio-extensions.h  tvm-notify.c  tvm-notify.h  tvm-pango-extensions.h  tvm-prompt.c  tvm-prompt.h  tvmnotify.c  tvmnotify.h  volman.pro
data/: volman.desktop
other/: 1Temp.c  tvm-gio-extensions.c  tvm-gio-extensions.h  tvm-input-device.c  tvm-input-device.h  tvm-pango-extensions.c  tvm-prompt.c  tvm-prompt.h  tvm-run.c  tvm-run.h  tvm-usb-device.c  tvm-usb-device.h
other/thunar-volman-settings/: main.c  tvm-command-entry.c  tvm-preferences-dialog.c
